book/tests/snapshots/snapshot__@transforms__select-7.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Error expected\n\nfrom artists\nderive nick = name\nselect ![artists.*]\n"
input_file: book/tests/prql/transforms/select-7.prql
---
SELECT
  name AS nick
FROM
  artists

