book/tests/snapshots/snapshot__@transforms__sort-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort age\n"
input_file: book/tests/prql/transforms/sort-0.prql
---
SELECT
  *
FROM
  employees
ORDER BY
  age

