book/tests/snapshots/snapshot__@transforms__sort-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort [age, -tenure, +salary]\n"
input_file: book/tests/prql/transforms/sort-2.prql
---
SELECT
  *
FROM
  employees
ORDER BY
  age,
  tenure DESC,
  salary

