book/tests/snapshots/snapshot__@transforms__sort-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort tenure\nderive name = f\"{first_name} {last_name}\"\n"
input_file: book/tests/prql/transforms/sort-4.prql
---
SELECT
  *,
  CONCAT(first_name, ' ', last_name) AS name
FROM
  employees
ORDER BY
  tenure

