book/tests/snapshots/snapshot__@transforms__take-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ntake 10\n"
input_file: book/tests/prql/transforms/take-0.prql
---
SELECT
  *
FROM
  employees
LIMIT
  10

