book/tests/snapshots/snapshot__@transforms__window-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from orders\nsort day\nwindow rows:-3..3 (\n  derive [centered_weekly_average = average value]\n)\ngroup [order_month] (\n  sort day\n  window expanding:true (\n    derive [monthly_running_total = sum value]\n  )\n)\n"
input_file: book/tests/prql/transforms/window-1.prql
---
SELECT
  *,
  AVG(value) OVER (
    ORDER BY
      day ROWS BETWEEN 3 PRECEDING AND 3 FOLLOWING
  ) AS centered_weekly_average,
  SUM(value) OVER (
    PARTITION BY order_month
    ORDER BY
      day ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW
  ) AS monthly_running_total
FROM
  orders

